# git2sqlite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli_option.rs  coco_commit.rs  database.rs  git_command.rs  git_log_parser.rs  main.rs
